# teamkatalog-bigquery-naisjob

./: .dockerignore  Dockerfile  README.md  Teamkatalog bigquery.ipynb  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: deploy.yaml
.nais/: alert.yaml  naisjob.yaml
