[tool.poetry]
name = "teamkatalog-bigquery-naisjob"
version = "0.1.0"
description = ""
authors = ["Roy Grini <roy.grini@nav.no>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
backoff = "^1.11.1"
nav_dcat = "^1"
pandas = "^2.2.3"
google_cloud_bigquery = "^3.5.0"
pyarrow = "^11.0.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
